k8s/api/scrolller-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrolller-api-deployment
  namespace: scrolller
  labels:
    app: scrolller-api
spec:
  selector:
    matchLabels:
      app: scrolller-api
  template:
    metadata:
      labels:
        app: scrolller-api
    spec:
      containers:
        - name: scrolller-api-container
          image: localhost:32000/scrolller-api:v1
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
