k8s/api/scrolller-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrolller-api-service
  namespace: scrolller
  labels:
    app: scrolller-api
spec:
  type: NodePort
  selector:
    app: scrolller-api
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30002
