k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: scrolller
  labels:
    app: api
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
