k8s/api/scrolller-api-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: scrolller-api-networkpolicy
  namespace: scrolller
  labels:
    app: scrolller-api
spec:
  podSelector:
    matchLabels:
      app: scrolller-api
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
